--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     이 소갯글은 마크에서 최초로 시작되어 일년에 한 바퀴 돌면서 받는 사람에게 행운을 주었고 지금은 당신의 눈에 들어온 이 소개글을 본 당신은 4일 안에 이 서버로 들어오셔야 합니다. 당신을 포함해서 7명의 플레이어들이 서버로 들어와야 합니다. 홍보를 해도 좋습니다. 혹 미신이라 하실지 모르지만 사실입니다. 영국에서 현솔이라는 사람은 2021년에 이 글을 적었습니다. 그는 비서에게 복사해서 보내라고 했습니다. 며칠 뒤에 초현실적 서버가 오픈되어 20명이 들어왔습니다. 어떤 이는 이 글을 읽었으나 96시간 동안 7명을 초대 해야 한다는 사실을 잊었습니다. 그는 곧 서울역에 눕게 되었습니다. 나중에야 이 사실을 알고 7명이 서버에 들어오니, 다시 좋은 직장을 얻었습니다. 미국의 바이든 대통령은    이 편지를 받았지만 그냥 버렸습니다. 결국 9일 후 그는 암살 당했습니다. 기억해 주세요. 이 글대로 실행하시면 7년의 행운이 있을 것이고 그렇지 않으면 3년의 불행이 있을 것입니다. 그리고 이 편지를 버리거나 낙서를 해서는 절대로  안됩니다. 7명입니다. 이 글을 읽은 사람은 행운이 깃들 것입니다. 힘들겠지만 좋은게 좋다고 생각하세요. 7년의 행운을 빌면서..s
     -->
     
+    <meta name="description" content="스트리머 서버 RABI입니다!">
+
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/main.css">
     
