--- a/index.html
+++ b/index.html
@@ -92,7 +92,17 @@
         
         <!-- 기타 -->
         <div class="foot-line-txt">Copyright 2021. RABI Server. All rights reserved.<br>
-        <div style="margin-top: 5px; font-size: 13px;"><b>Special Thanks | </b>리아, 뚜린, 하련</div>
+            <div style="margin-top: 5px; font-size: 13px;"><b>Special Thanks | </b>리아, 뚜린, 하련
+            </div>
+            
+            <center>
+                <div class="twitch-btn">
+                    <img onclick="window.location='https://www.twitch.tv/leeharyun_'" style="margin-top: 20px;" src="./src/img/twitch_haryun.png" height="50px;">
+                    <img onclick="window.location='https://www.youtube.com/channel/UCwqUYpMIubmtJ2F06xFfOcw'" src="./src/img/twitch_Enfls.png" height="50px;">
+                    <img onclick="window.location='https://www.twitch.tv/eria1115'" src="./src/img/twitch_fldk.png" height="50px;">
+                    <img onclick="window.location='https://www.twitch.tv/lyua62'" src="./src/img/twitch_fbdk.png" height="50px;">
+                </div>
+            </center>
         </div>
         <div class="foot-line"></div>
     </body>
